--- a/raven/public/scss/raven.bundle.scss
+++ b/raven/public/scss/raven.bundle.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Cal Sans";
-    src: url("/assets/raven/fonts/CalSans.woff2") format("woff2");
+    src: url("fonts/CalSans.woff2") format("woff2");
 }
 
 :root {
